Fixed hover link css not turning black for saved articles

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -3,6 +3,10 @@ a, a:hover {
     text-decoration: none;
 }
 
-.saved {
+.nav-links:hover {
+    color: white; 
+}
+
+.saved, a:hover {
     color: black;
 }
